--- a/_sass/classic/_custom.scss
+++ b/_sass/classic/_custom.scss
@@ -124,3 +124,11 @@
 	text-align: center;
 	font-size: $small-1-font-size;
 }
+
+// ====
+// General
+// ====
+
+.highlighter-rouge {
+	background: #fc9;
+}
